--- a/e107_0.8/e107_themes/jayya/style.css
+++ b/e107_0.8/e107_themes/jayya/style.css
@@ -398,6 +398,7 @@ img.S16		{ width: 16px; height: 16px }
 img.S32		{ width: 32px; height: 32px }
 img.S64		{ width: 64px; height: 64px }
 img.S128		{ width: 128px; height: 128px }
+img.edit	{ margin-right: 5px }
 /*******************************************************************************************************************/
 
 /******** Decorate JS */
