--- a/trunk/e107_0.8/e107_themes/jayya/style.css
+++ b/trunk/e107_0.8/e107_themes/jayya/style.css
@@ -432,6 +432,17 @@ select, .tbox, .helpbox {
     background:#fff;
     font:12px arial, helvetica, sans-serif;
 }
+
+input[disabled='disabled'],
+textarea[disabled='disabled'],
+select[disabled='disabled'],
+.tbox.disabled,
+.disabled {
+  background-color:#EFEFEF;
+  color:#000;
+  cursor:default;
+}
+
 option { padding-right: 10px;}
 input.input-text, textarea, .tbox, .helpbox { padding:2px; }
 .tbox.large { width: 95% !important; }
